# ai-coding-agent

./: README.md  pyproject.toml
src/local_coding_agent/: __init__.py  agent.py  cli.py  llm.py  protocol.py  tools.py
src/local_coding_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_agent.py  test_protocol.py  test_tools.py
