[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-coding-agent"
version = "0.1.0"
description = "A small local coding agent that talks to open-source LLM runtimes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Local Coding Agent" }]
dependencies = [
  "torch>=2.2",
  "transformers>=4.40",
]

[project.optional-dependencies]
dev = []

[project.scripts]
local-agent = "local_coding_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
